Added hyperparameter tuning to main

--- a/main.ipynb
+++ b/main.ipynb
@@ -4,24 +4,39 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Siah Jin Thau\\OneDrive\\Desktop\\Work\\IT1244\\Group Project\\IT1244-Fraud-Analysis\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "## Import packages\n",
+    "import optuna\n",
+    "import warnings\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns \n",
     "import xgboost as xgb\n",
     "import lightgbm as lgb\n",
-    "from typing import Literal\n",
     "import matplotlib.pyplot as plt\n",
+    "from typing import Literal, Callable\n",
     "from imblearn.over_sampling import SMOTE\n",
     "from sklearn.decomposition import PCA\n",
+    "from sklearn.metrics import recall_score\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
-    "from sklearn.linear_model import LogisticRegression, SGDClassifier"
+    "from sklearn.linear_model import LogisticRegression, SGDClassifier\n",
+    "from sklearn.model_selection import train_test_split, StratifiedKFold\n",
+    "\n",
+    "# To remove warnings\n",
+    "warnings.filterwarnings(\"ignore\")"
    ]
   },
   {
@@ -999,6 +1014,99 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## Hyperparameter Tuning functions\n",
+    "\n",
+    "def cross_validate_model(\n",
+    "        model : Callable,\n",
+    "        params : dict,\n",
+    "        data : pd.DataFrame = data_processing(),\n",
+    "        response_col : str = 'target',\n",
+    "        n_folds : int = 5\n",
+    "    ) -> dict:\n",
+    "    \"\"\"\n",
+    "    Performs stratified K-fold cross-validation on a specific model,\n",
+    "    ensuring the ratio of positive and negative cases is balanced across all folds.\n",
+    "    \n",
+    "    Parameters:\n",
+    "        data (pd.DataFrame): The full dataset to split into folds.\n",
+    "        response_col (str): The name of the response column.\n",
+    "        params (dict): The parameters for the model.\n",
+    "        n_folds (int): The number of folds for cross-validation.\n",
+    "        \n",
+    "    Returns:\n",
+    "        dict: A dictionary containing average cross-validated metrics.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    skf = StratifiedKFold(n_splits = n_folds, shuffle = True, random_state = 42)\n",
+    "    \n",
+    "    recall_scores = []\n",
+    "    \n",
+    "    X = data.drop(columns = [response_col])\n",
+    "    y = data[response_col]\n",
+    "\n",
+    "    for train_index, test_index in skf.split(X, y):\n",
+    "        X_train, X_test = X.iloc[train_index], X.iloc[test_index]\n",
+    "        y_train, y_test = y.iloc[train_index], y.iloc[test_index]\n",
+    "        \n",
+    "        train_data = pd.concat([X_train, y_train], axis = 1)\n",
+    "\n",
+    "        test_data = X_test\n",
+    "        \n",
+    "        y_pred = model(\n",
+    "            train_data = train_data, \n",
+    "            response_col = response_col, \n",
+    "            test_data = test_data,\n",
+    "            prob = False,\n",
+    "            **params\n",
+    "        )\n",
+    "        \n",
+    "        recall_scores.append(recall_score(y_test, y_pred, zero_division = 0))\n",
+    "    \n",
+    "    recall = np.mean(recall_scores)\n",
+    "    \n",
+    "    return recall\n",
+    "\n",
+    "def get_optimal_parameters(\n",
+    "        model : Callable,\n",
+    "        int_params : dict[str : list] = {},\n",
+    "        float_params : dict[str : list] = {},\n",
+    "        categorical_params : dict[str : list] = {},\n",
+    "        trials : int = 20\n",
+    "        ):\n",
+    "\n",
+    "    def helper(\n",
+    "            trial : optuna.trial.Trial,\n",
+    "        ) -> dict:\n",
+    "\n",
+    "        params = {}\n",
+    "\n",
+    "        for argument, values in int_params.items():\n",
+    "            params[argument] = trial.suggest_int(argument, values[0], values[1])\n",
+    "        \n",
+    "        for argument, values in float_params.items():\n",
+    "            params[argument] = trial.suggest_float(argument, values[0], values[1])\n",
+    "\n",
+    "        for argument, values in categorical_params.items():\n",
+    "            params[argument] = trial.suggest_categorical(argument, values)\n",
+    "\n",
+    "        recall = cross_validate_model(\n",
+    "            model = model,\n",
+    "            params = params\n",
+    "        )\n",
+    "\n",
+    "        return(recall)\n",
+    "\n",
+    "    study = optuna.create_study(direction = 'maximize')\n",
+    "    study.optimize(func = helper, n_trials = trials)\n",
+    "    return(study.best_params)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "## Define main workflow\n",
     "\n",
     "def main():\n",
@@ -1007,7 +1115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1018,48 +1126,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[9.80444220e-02 4.62091097e-05 6.34295397e-02 ... 1.23963710e-01\n",
-      " 4.62467775e-01 4.05377998e-01]\n",
-      "[0.1122873  0.00246492 0.28776439 ... 0.08284157 0.18002027 0.50429234]\n"
+      "[I 2024-10-25 11:35:34,655] A new study created in memory with name: no-name-8fa00331-86a9-4de7-810f-c53db60a513d\n",
+      "[I 2024-10-25 11:35:35,147] Trial 0 finished with value: 0.8433085501858736 and parameters: {'num_iterations': 125, 'num_leaves': 47, 'max_depth': 15, 'bagging_freq': 4, 'learning_rate': 0.44941056593320144, 'bagging_fraction': 0.8366631481382854, 'feature_fraction': 0.2824151813841448, 'lambda_l1': 3.093668648684237, 'lambda_l2': 1.6053308362939156, 'min_split_gain': 0.3941113237774402}. Best is trial 0 with value: 0.8433085501858736.\n",
+      "[I 2024-10-25 11:35:35,579] Trial 1 finished with value: 0.5137546468401487 and parameters: {'num_iterations': 193, 'num_leaves': 44, 'max_depth': 24, 'bagging_freq': 3, 'learning_rate': 7.610558993795522, 'bagging_fraction': 0.5137357739810291, 'feature_fraction': 0.8213061493716085, 'lambda_l1': 1.0604475047366595, 'lambda_l2': 3.8820102600026725, 'min_split_gain': 3.1743073598836484}. Best is trial 0 with value: 0.8433085501858736.\n",
+      "[I 2024-10-25 11:35:35,780] Trial 2 finished with value: 0.2860594795539034 and parameters: {'num_iterations': 172, 'num_leaves': 3, 'max_depth': 28, 'bagging_freq': 5, 'learning_rate': 7.642446080249992, 'bagging_fraction': 0.8630989031509342, 'feature_fraction': 0.41933622205342225, 'lambda_l1': 3.389242352612076, 'lambda_l2': 3.012097036328283, 'min_split_gain': 1.2353847249179966}. Best is trial 0 with value: 0.8433085501858736.\n",
+      "[I 2024-10-25 11:35:35,959] Trial 3 finished with value: 0.40501858736059476 and parameters: {'num_iterations': 115, 'num_leaves': 10, 'max_depth': 48, 'bagging_freq': 0, 'learning_rate': 8.831747649130104, 'bagging_fraction': 0.1686404076792194, 'feature_fraction': 0.03723822365346581, 'lambda_l1': 0.24770543518066734, 'lambda_l2': 3.922751516652354, 'min_split_gain': 4.3060865174677705}. Best is trial 0 with value: 0.8433085501858736.\n",
+      "[I 2024-10-25 11:35:36,182] Trial 4 finished with value: 0.7819702602230484 and parameters: {'num_iterations': 189, 'num_leaves': 3, 'max_depth': 38, 'bagging_freq': 0, 'learning_rate': 9.056388680580186, 'bagging_fraction': 0.3533237128782078, 'feature_fraction': 0.41914855056425626, 'lambda_l1': 1.3102893989373332, 'lambda_l2': 4.785843007285114, 'min_split_gain': 2.7016132151538526}. Best is trial 0 with value: 0.8433085501858736.\n",
+      "[I 2024-10-25 11:35:36,316] Trial 5 finished with value: 0.216728624535316 and parameters: {'num_iterations': 66, 'num_leaves': 31, 'max_depth': 19, 'bagging_freq': 9, 'learning_rate': 7.987036535318065, 'bagging_fraction': 0.7153347472489461, 'feature_fraction': 0.05701360160968178, 'lambda_l1': 4.900358575990251, 'lambda_l2': 1.4665187933599295, 'min_split_gain': 2.321476076443203}. Best is trial 0 with value: 0.8433085501858736.\n",
+      "[I 2024-10-25 11:35:36,758] Trial 6 finished with value: 0.3104089219330855 and parameters: {'num_iterations': 163, 'num_leaves': 29, 'max_depth': 35, 'bagging_freq': 1, 'learning_rate': 6.074140119015227, 'bagging_fraction': 0.3498769948044911, 'feature_fraction': 0.4913205191444081, 'lambda_l1': 3.499784888943893, 'lambda_l2': 1.011242698007938, 'min_split_gain': 0.9383324082985511}. Best is trial 0 with value: 0.8433085501858736.\n",
+      "[I 2024-10-25 11:35:36,927] Trial 7 finished with value: 0.6035315985130111 and parameters: {'num_iterations': 114, 'num_leaves': 40, 'max_depth': 25, 'bagging_freq': 0, 'learning_rate': 8.765011539810896, 'bagging_fraction': 0.119411534833166, 'feature_fraction': 0.05554685547582655, 'lambda_l1': 3.70144995307147, 'lambda_l2': 1.4927000039050213, 'min_split_gain': 3.209800033657377}. Best is trial 0 with value: 0.8433085501858736.\n",
+      "[I 2024-10-25 11:35:37,161] Trial 8 finished with value: 0.4 and parameters: {'num_iterations': 152, 'num_leaves': 31, 'max_depth': 24, 'bagging_freq': 9, 'learning_rate': 8.362053606571688, 'bagging_fraction': 0.42550623256115006, 'feature_fraction': 0.12626830373431858, 'lambda_l1': 1.003664871112457, 'lambda_l2': 3.0491401283489634, 'min_split_gain': 0.554052938546748}. Best is trial 0 with value: 0.8433085501858736.\n",
+      "[I 2024-10-25 11:35:37,413] Trial 9 finished with value: 0.7535315985130111 and parameters: {'num_iterations': 137, 'num_leaves': 45, 'max_depth': 2, 'bagging_freq': 2, 'learning_rate': 0.7255380672020888, 'bagging_fraction': 0.73591527608445, 'feature_fraction': 0.8087068311881217, 'lambda_l1': 0.17149149105950778, 'lambda_l2': 1.4924047314706057, 'min_split_gain': 4.4338489820107725}. Best is trial 0 with value: 0.8433085501858736.\n",
+      "[I 2024-10-25 11:35:37,835] Trial 10 finished with value: 0.8358736059479555 and parameters: {'num_iterations': 77, 'num_leaves': 19, 'max_depth': 9, 'bagging_freq': 6, 'learning_rate': 0.42266965467963097, 'bagging_fraction': 0.9423345826132644, 'feature_fraction': 0.2713400151362953, 'lambda_l1': 2.315242942429177, 'lambda_l2': 0.036516558345791816, 'min_split_gain': 0.1658141218916689}. Best is trial 0 with value: 0.8433085501858736.\n",
+      "[I 2024-10-25 11:35:38,200] Trial 11 finished with value: 0.82453531598513 and parameters: {'num_iterations': 71, 'num_leaves': 17, 'max_depth': 9, 'bagging_freq': 6, 'learning_rate': 0.23616499805749605, 'bagging_fraction': 0.9436868867169923, 'feature_fraction': 0.27032210933269496, 'lambda_l1': 2.319646240788825, 'lambda_l2': 0.0988836156651074, 'min_split_gain': 0.009416575550633244}. Best is trial 0 with value: 0.8433085501858736.\n",
+      "[I 2024-10-25 11:35:38,467] Trial 12 finished with value: 0.5914498141263941 and parameters: {'num_iterations': 83, 'num_leaves': 20, 'max_depth': 12, 'bagging_freq': 7, 'learning_rate': 2.4630373879410854, 'bagging_fraction': 0.9821828990727075, 'feature_fraction': 0.2821782117691652, 'lambda_l1': 2.3859891867780254, 'lambda_l2': 0.0018811868393843814, 'min_split_gain': 1.6645647440579494}. Best is trial 0 with value: 0.8433085501858736.\n",
+      "[I 2024-10-25 11:35:38,749] Trial 13 finished with value: 0.5234200743494424 and parameters: {'num_iterations': 94, 'num_leaves': 21, 'max_depth': 12, 'bagging_freq': 4, 'learning_rate': 2.966314110520182, 'bagging_fraction': 0.7370461950026124, 'feature_fraction': 0.257598203821051, 'lambda_l1': 2.85445460916494, 'lambda_l2': 0.7097478314154144, 'min_split_gain': 0.026887651155146824}. Best is trial 0 with value: 0.8433085501858736.\n",
+      "[I 2024-10-25 11:35:39,116] Trial 14 finished with value: 0.7466542750929369 and parameters: {'num_iterations': 54, 'num_leaves': 50, 'max_depth': 6, 'bagging_freq': 7, 'learning_rate': 2.0256083578630655, 'bagging_fraction': 0.595363958677446, 'feature_fraction': 0.6101720940453305, 'lambda_l1': 1.8007283641420277, 'lambda_l2': 2.259114499029489, 'min_split_gain': 1.8216886549977032}. Best is trial 0 with value: 0.8433085501858736.\n",
+      "[I 2024-10-25 11:35:39,508] Trial 15 finished with value: 0.583271375464684 and parameters: {'num_iterations': 100, 'num_leaves': 36, 'max_depth': 17, 'bagging_freq': 4, 'learning_rate': 4.512636502844988, 'bagging_fraction': 0.8127149323539548, 'feature_fraction': 0.61752476821189, 'lambda_l1': 4.370722121796882, 'lambda_l2': 2.1323794786206056, 'min_split_gain': 0.6567293841164953}. Best is trial 0 with value: 0.8433085501858736.\n",
+      "[I 2024-10-25 11:35:39,793] Trial 16 finished with value: 0.7444237918215613 and parameters: {'num_iterations': 136, 'num_leaves': 15, 'max_depth': 2, 'bagging_freq': 7, 'learning_rate': 1.4697337244231068, 'bagging_fraction': 0.615938908832554, 'feature_fraction': 0.18460924065799136, 'lambda_l1': 2.8136067391653468, 'lambda_l2': 0.5954954889189366, 'min_split_gain': 1.3787387067926065}. Best is trial 0 with value: 0.8433085501858736.\n",
+      "[I 2024-10-25 11:35:40,119] Trial 17 finished with value: 0.6689591078066914 and parameters: {'num_iterations': 101, 'num_leaves': 24, 'max_depth': 17, 'bagging_freq': 10, 'learning_rate': 3.774865988325176, 'bagging_fraction': 0.9959300786669617, 'feature_fraction': 0.36469258628217993, 'lambda_l1': 1.8505440173936005, 'lambda_l2': 1.9371500239068153, 'min_split_gain': 0.5182215600355571}. Best is trial 0 with value: 0.8433085501858736.\n",
+      "[I 2024-10-25 11:35:40,419] Trial 18 finished with value: 0.4767657992565056 and parameters: {'num_iterations': 128, 'num_leaves': 12, 'max_depth': 7, 'bagging_freq': 5, 'learning_rate': 5.962981497566616, 'bagging_fraction': 0.8401349865590014, 'feature_fraction': 0.9651758568915669, 'lambda_l1': 4.115647435300483, 'lambda_l2': 2.7959534693585777, 'min_split_gain': 0.04157643820677123}. Best is trial 0 with value: 0.8433085501858736.\n",
+      "[I 2024-10-25 11:35:40,669] Trial 19 finished with value: 0.7886617100371748 and parameters: {'num_iterations': 50, 'num_leaves': 36, 'max_depth': 14, 'bagging_freq': 2, 'learning_rate': 1.1472992394526502, 'bagging_fraction': 0.8911149499296187, 'feature_fraction': 0.5396627258946216, 'lambda_l1': 2.985762220693074, 'lambda_l2': 0.5152302270187044, 'min_split_gain': 2.0448182230599334}. Best is trial 0 with value: 0.8433085501858736.\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'num_iterations': 125,\n",
+       " 'num_leaves': 47,\n",
+       " 'max_depth': 15,\n",
+       " 'bagging_freq': 4,\n",
+       " 'learning_rate': 0.44941056593320144,\n",
+       " 'bagging_fraction': 0.8366631481382854,\n",
+       " 'feature_fraction': 0.2824151813841448,\n",
+       " 'lambda_l1': 3.093668648684237,\n",
+       " 'lambda_l2': 1.6053308362939156,\n",
+       " 'min_split_gain': 0.3941113237774402}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "## FOR TESTING \n",
     "\n",
-    "# Temp Fix\n",
-    "import warnings\n",
-    "warnings.filterwarnings(\"ignore\")\n",
-    "\n",
-    "df = data_processing()\n",
-    "split_index = len(df) // 2\n",
-    "df1 = df.iloc[:split_index]\n",
-    "df2 = df.iloc[split_index:]\n",
-    "out = light_gradient_boosting_machine(\n",
-    "    train_data = df1,\n",
-    "    response_col = 'target',\n",
-    "    test_data = df2,\n",
-    "    prob = True,\n",
-    "    learning_rate = 0.9,\n",
-    "    min_split_gain = 1\n",
-    ")\n",
-    "print(out)\n",
-    "out = light_gradient_boosting_machine(\n",
-    "    train_data = df1,\n",
-    "    response_col = 'target',\n",
-    "    test_data = df2,\n",
-    "    prob = True,\n",
-    "    learning_rate = 0.1,\n",
-    "    min_split_gain = 1\n",
-    ")\n",
-    "print(out)"
+    "get_optimal_parameters(\n",
+    "    light_gradient_boosting_machine,\n",
+    "    int_params = {\n",
+    "        'num_iterations' : [50, 200],\n",
+    "        'num_leaves' : [1, 50],\n",
+    "        'max_depth' : [1, 50],\n",
+    "        'bagging_freq' : [0, 10]\n",
+    "    },\n",
+    "    float_params = {\n",
+    "        'learning_rate' : [0.001, 10],\n",
+    "        'bagging_fraction' : [0.001, 1],\n",
+    "        'feature_fraction' : [0.001, 1],\n",
+    "        'lambda_l1' : [0, 5],\n",
+    "        'lambda_l2' : [0, 5],\n",
+    "        'min_split_gain' : [0, 5]\n",
+    "    },\n",
+    "    categorical_params = {}\n",
+    ")"
    ]
   }
  ],
