--- a/main.ipynb
+++ b/main.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Siah Jin Thau\\OneDrive\\Desktop\\Work\\IT1244\\Group Project\\IT1244-Fraud-Analysis\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Import packages\n",
     "import optuna\n",
@@ -40,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -592,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -693,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1069,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1115,7 +1106,7 @@
     "            train_data = train_data, \n",
     "            response_col = response_col, \n",
     "            test_data = test_data,\n",
-    "            prob = False,\n",
+    "            prob = True,\n",
     "            **params\n",
     "        )\n",
     "        \n",
@@ -1219,7 +1210,8 @@
     "            train_data = train_data,\n",
     "            response_col = response_col,\n",
     "            test_data = test_data,\n",
-    "            **param_dict\n",
+    "            prob = True,\n",
+    "            **param_dict,\n",
     "        )\n",
     "        \n",
     "        roc_auc = roc_auc_score(y_test, y_pred_proba)\n",
