--- a/main.ipynb
+++ b/main.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "## Import packages\n",
+    "import json\n",
     "import optuna\n",
     "import warnings\n",
     "import numpy as np\n",
@@ -20,8 +21,8 @@
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.metrics import roc_auc_score, roc_curve\n",
     "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
+    "from sklearn.metrics import roc_auc_score, roc_curve, recall_score\n",
     "from sklearn.linear_model import LogisticRegression, SGDClassifier\n",
     "from sklearn.model_selection import train_test_split, StratifiedKFold\n",
     "\n",
@@ -1060,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1173,7 +1174,8 @@
     "def evaluate_models_auc(\n",
     "        models : list[Callable], \n",
     "        params : list[dict[str : any]], \n",
-    "        df = data_processing()\n",
+    "        df = data_processing(),\n",
+    "        print_recall : bool = False\n",
     "    ) -> list[float]:\n",
     "    \"\"\"\n",
     "    Evaluates a list of models by training each model with the corresponding parameters \n",
@@ -1214,6 +1216,12 @@
     "            **param_dict,\n",
     "        )\n",
     "        \n",
+    "        y_pred_label = [1 if prob >= 0.5 else 0 for prob in y_pred_proba]\n",
+    "\n",
+    "        recall = recall_score(y_test, y_pred_label)\n",
+    "\n",
+    "        print(f\"Model: {model_func.__name__}, Recall: {recall}\")\n",
+    "\n",
     "        roc_auc = roc_auc_score(y_test, y_pred_proba)\n",
     "        \n",
     "        roc_auc_results.append((model_func.__name__, roc_auc))\n",
@@ -1247,11 +1255,16 @@
     "        )\n",
     "        models[model] = best_params\n",
     "    \n",
+    "    with open(\"best_params.json\", \"w\") as outfile: \n",
+    "        json.dump(best_params, outfile)\n",
+    "\n",
     "    models_list = list(models.keys())\n",
     "    models_optimal_params = list(models.values())\n",
     "\n",
     "    best_aucs = evaluate_models_auc(\n",
-    "        models = models_list, params = models_optimal_params)\n",
+    "        models = models_list, \n",
+    "        params = models_optimal_params,\n",
+    "        print_recall = True)\n",
     "    \n",
     "    new_models_list = []\n",
     "    new_params = []\n",
