--- a/main.ipynb
+++ b/main.ipynb
@@ -1070,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1227,9 +1227,11 @@
     "        \n",
     "        y_pred_label = [1 if prob >= 0.5 else 0 for prob in y_pred_proba]\n",
     "\n",
-    "        recall = recall_score(y_test, y_pred_label)\n",
+    "        if print_recall:\n",
     "\n",
-    "        print(f\"Model: {model_func.__name__}, Recall: {recall}\")\n",
+    "            recall = recall_score(y_test, y_pred_label)\n",
+    "\n",
+    "            print(f\"Model: {model_func.__name__}, Recall: {recall}\")\n",
     "\n",
     "        roc_auc = roc_auc_score(y_test, y_pred_proba)\n",
     "        \n",
@@ -1265,7 +1267,7 @@
     "        models[model] = best_params\n",
     "    \n",
     "    with open(\"best_params.json\", \"w\") as outfile: \n",
-    "        json.dump(best_params, outfile)\n",
+    "        json.dump(models, outfile)\n",
     "\n",
     "    models_list = list(models.keys())\n",
     "    models_optimal_params = list(models.values())\n",
