--- a/main.ipynb
+++ b/main.ipynb
@@ -1061,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1257,8 +1257,10 @@
     "        )\n",
     "        models[model] = best_params\n",
     "    \n",
+    "    best_params_dict = {key.__name__ : value for key, value in models.items()}\n",
+    "\n",
     "    with open(\"best_params.json\", \"w\") as outfile: \n",
-    "        json.dump(models, outfile)\n",
+    "        json.dump(best_params_dict, outfile)\n",
     "\n",
     "    models_list = list(models.keys())\n",
     "    models_optimal_params = list(models.values())\n",
