added path requirement

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,6 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## REPLACE WITH PATH TO INVOICE.CSV AND CLIENT.CSV BEFORE RUNNING\n",
+    "client_csv_path = \"Data/client.csv\"\n",
+    "invoice_csv_path = \"Data/invoice.csv\"\n",
+    "## REPLACE WITH PATH TO INVOICE.CSV AND CLIENT.CSV BEFORE RUNNING"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
    "outputs": [],
@@ -32,19 +44,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "## Data Importing functions\n",
     "\n",
-    "def import_client(filepath : str = \"Data/client.csv\") -> pd.DataFrame:\n",
+    "def import_client(filepath : str = client_csv_path) -> pd.DataFrame:\n",
     "    \"\"\"\n",
     "    Function to import client dataset.\n",
     "    \"\"\"\n",
     "    return pd.read_csv(filepath)\n",
     "\n",
-    "def import_invoice(filepath : str = \"Data/invoice.csv\") -> pd.DataFrame:\n",
+    "def import_invoice(filepath : str = invoice_csv_path) -> pd.DataFrame:\n",
     "    \"\"\"\n",
     "    Function to import invoice dataset.\n",
     "    \"\"\"\n",
